--- a/markdownblog/blog/templates/blog/index.html
+++ b/markdownblog/blog/templates/blog/index.html
@@ -13,7 +13,7 @@
             <div class="content">
                 <p>{{ post.intro }}</p>
 
-                <a href="#">Read more</a>
+                <a href="{% url 'detail' post.id %}">Read more</a>
             </div>
         </div>
     {% endfor %}
