--- a/markdownblog/blog/templates/blog/base.html
+++ b/markdownblog/blog/templates/blog/base.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hello Bulma!</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+        <link rel="stylesheet" href="/static/prism.css">
+        
     </head>
 
     <body>
@@ -20,5 +22,6 @@
                 {% endblock %}
             </div>
         </section>
+        <script src="/static/prism.js"></script>
     </body>
 </html>
