--- a/markdownblog/blog/templates/blog/detail.html
+++ b/markdownblog/blog/templates/blog/detail.html
@@ -3,20 +3,22 @@
 {% load blog_extras %}
 
 {% block content %}
+    <section class="hero is-link">
     <div class="box">
         <section class="hero is-primary is-medium">
             <div class="hero-body">
                 <p class="title">{{ post.title }}</p>
-                <p class="subtitle">{{ post.created_ad|date:"Y-m-d H:i" }}</p>
+                <p class="subtitle">{{ post.created_at|date:"Y-m-d H:i" }}</p>
             </div>
         </section>
 
         <div class="content intro">
             <p>{{ post.intro }}</p>
         </div>
-
         <div class="content">
-            {{ post.body|convert_markdown|safe }}
+            <pre class="language-python">
+                {{ post.body|convert_markdown|safe }}
+            </pre>
         </div>
-    </div>
+    </section>
 {% endblock %}
